-Added a switch button to round up the tip and added a focus manager component

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="cost_of_service">Cost of Service</string>
     <string name="tip_amount">Tip amount: %s</string>
     <string name="bill_amount">Bill amount:</string>
+    <string name="round_up_tip">Round up tip?</string>
+
 
 </resources>
